bootstrap/kubernetes/apps/media/jellyfin/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - port: 8096
      protocol: TCP
      targetPort: 8096
      name: webui
  selector:
    run: jellyfin
  loadBalancerIP: 10.42.20.60
